--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-cn">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>吴朝进的个人网站</title>
+	<link rel="stylesheet"  href="css/css.css">
 </head>
 <body>
-	<h1>My Room</h1>
+	<div class="h1">吴朝进的个人网站</div>
+	<div class="h2">下面是一个图片展示</div>
+	<img class="testImg" src="images/city.png" alt="">
+	<input class="inp1" type="button" value="前往下一页">
+	<script src="js/jq.js"></script>
+	<script src="js/js.js"></script>
 </body>
 </html>
